force-app/main/default/objects/TarifasModulares__c/TarifasModulares__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TarifasModulares</label>
</CustomObject>