force-app/main/default/objects/TarifasModulares__c/fields/K2__c.field-meta.xml
<CustomField>
    <fullName>K2__c</fullName>
    <label>K2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>