force-app/main/default/objects/TarifasModulares__c/fields/K3__c.field-meta.xml
<CustomField>
    <fullName>K3__c</fullName>
    <label>K3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>