force-app/main/default/objects/TarifasModulares__c/fields/TR__c.field-meta.xml
<CustomField>
    <fullName>TR__c</fullName>
    <label>TR</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>