force-app/main/default/objects/TarifasModulares__c/listViews/Tarifas.listView-meta.xml
<ListView>
    <fullName>Tarifas</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>Provincia__c</columns>
    <columns>K1__c</columns>
    <columns>K2__c</columns>
    <columns>K3__c</columns>
    <columns>K4__c</columns>
    <columns>TR__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tarifas</label>
    <language>es</language>
</ListView>